# lcsm-server

./: .gitignore  Cargo.toml  LICENSE  Lcsm.sln  go.mod  go.sum
Lcsm/: Dockerfile  Lcsm.csproj  Program.cs  appsettings.Development.json  nlog.config
Lcsm.Runner/: Dockerfile  Lcsm.Runner.csproj  Program.cs  RunnerApplication.cs  nlog.config
Lcsm.RunnerEngine/: EmbedEngine.cs  ModelMapper.cs
Lcsm.RunnerEngine/Database/: IDbContext.cs  IDbContextProvider.cs
Lcsm.RunnerEngine/Managers/: InstanceManager.cs  ProcessManager.cs
Lcsm.RunnerEngine/Protocol/: Extensions.Management.cs  Extensions.cs  RpcClient.cs  RpcException.cs  RpcServer.cs
Lcsm.RunnerEngine/Sockets/: IConnection.cs  ISocket.cs
Lcsm.ServerEngine/: EmbedServer.cs  Lcsm.ServerEngine.csproj  ModelMapper.cs  ServerWorker.cs
Lcsm.ServerEngine/Protocol/: BasePacket.cs  InstanceUpdatePacket.cs  PacketType.cs  ProtocolClient.cs  ProtocolException.cs
Lcsm.ServerEngine/ServerManagement/: IDbContext.cs  IDbContextProvider.cs  InstanceManager.cs
Lcsm.ServerEngine/Sockets/: IConnection.cs  ISocket.cs  SystemSocket.cs
Lcsm/Common/: InternalSocket.cs  LcsmDatabaseProvider.cs
Lcsm/Controllers/: InstancesController.cs  RunnersController.cs  UserController.cs
Lcsm/DataModels/: AuthenticateRequestDto.cs  AuthenticateResponseDto.cs  InstanceUpdateDto.cs  RunnerUpdateDto.cs  UserUpdateDto.cs
Lcsm/Database/: LcsmDbContext.cs
Lcsm/Migrations/: 20250124134343_Initial.Designer.cs  20250124134343_Initial.cs  20250124140605_User.Designer.cs  20250124140605_User.cs  20250125053009_AddRunner.Designer.cs  20250125053009_AddRunner.cs  20250125141022_AddRunnerName.Designer.cs  (+4 more)
cmd/panel/: app.go  (+2 more)
common/: json.go  logger.go
lcsm-master/: Cargo.toml
lcsm-master/src/: app_state.rs  errors.rs  lib.rs  main.rs
lcsm-master/src/entities/: mod.rs  permission.rs  slave.rs  user.rs
lcsm-master/src/routes/: instances.rs  mod.rs  slaves.rs  users.rs
lcsm-master/src/services/: auth.rs  mod.rs  permission.rs  permission_control.rs  user.rs
lcsm-slave/: Cargo.toml
lcsm-slave/src/: app_state.rs  errors.rs  lib.rs  main.rs  process_manager.rs
lcsm-slave/src/entities/: instance.rs
lcsm-slave/src/routes/: docker.rs  instance.rs  instances.rs  mod.rs  processes.rs
lcsm-slave/src/services/: docker_service.rs  log_manage.rs  log_manager.rs  mod.rs  process_manage.rs  process_manager.rs
lcsm-slave/src/transfer/: child_process.rs  mod.rs  pagination.rs  pagination_options.rs
panel/: errors.go
(+42 files in other folders)
