[package]
name = "lcsm-master"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros", "ws"] }
axum-extra = { version = "0.10.1", features = ["query"] }
bcrypt = "0.15.1"
bytes = "1.10.1"
futures = "0.3.31"
json-patch = "4.0.0"
jsonwebtoken = "9.3.0"
sea-orm = { version = "1.1.0", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "sync",
] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "auth"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
