[package]
name = "lcsm-slave"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros", "ws"] }
axum-extra = { version = "0.10.1", features = ["query"] }
bollard = { version = "0.19.1", optional = true }
bytes = "1.10.1"
env_logger = "0.11.8"
futures = "0.3.31"
json-patch = "4.0.0"
log = "0.4.27"
sea-orm = { version = "1.1.0", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "sync",
] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "auth", "fs"] }
# typed-container = { path = "../typed-container" }

[features]
docker = ["bollard"]
